--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <strong><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill.</a></strong> Ele conta que abriu o <strong><a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a></strong> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
-        <img src="imagens/dan-droids-pq.png" alt="">
+        <picture>
+            <source media="(max-width:800px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+            <img src="imagens/dan-droids.png" alt="imgagem flex">
+        </picture>
 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
 
@@ -39,7 +42,9 @@
 
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank"><strong>Irina Blok</strong></a> , também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-        <img src="imagens/irina-blok-pq.jpg" alt="">
+        <picture>
+            <source media="(max-width: 800px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+            <img src="imagens/irina-blok.jpg" alt=""></picture>
 
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
