--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
 
-    <h1 class="topo">CURIOSIDADES DE TECNOLOGIA</h1>
+    <h1 class="topo">CURIOSIDADES DE/ TECNOLOGIA</h1>
 
     <h2 class="topo">Tudo aquilo que voce sempre quis saber sobre o mundo Tech, em um unico lugar</h2>
 
