--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <main>
         <article>
-        <h1 id="h1main">@Historia do mascote do android</h1>
+        <h1 id="h1main">Historia do mascote do android</h1>
         <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
         <h2 class="segundot">a primeira versao</h2>
