--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <h2 class="segundot">a primeira versao</h2>
 
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <strong><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill.</a></strong> Ele conta que abriu o <strong><a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a></strong> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <strong><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill.&#x1F517</a></strong> Ele conta que abriu o <strong><a href="https://inkscape.org/pt-br/" target="_blank">Inkscape&#x1F517</a></strong> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
         <picture>
             <source media="(max-width:800px)" srcset="imagens/dan-droids-pq.png" type="image/png">
@@ -41,7 +41,7 @@
 
         <h2 class="segundot">Surge um novo mascote</h2>
 
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank"><strong>Irina Blok</strong></a> , também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com" target="_blank"><strong>Irina Blok&#x1F517</strong></a> , também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
         <picture>
             <source media="(max-width: 800px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
@@ -79,7 +79,7 @@
             </ul>
             <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10. </p>
     
-            <p>Acesse aqui o site <a id="linkandroid" href="https://www.android.com/intl/pt_br/what-is-android/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+            <p>Acesse aqui o site <a id="linkandroid" href="https://www.android.com/intl/pt_br/what-is-android/" target="_blank">Android History&#x1F517</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
         </aside>
 
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
